--- a/tools/shc_e2p_editor/pom.xml
+++ b/tools/shc_e2p_editor/pom.xml
@@ -38,6 +38,13 @@
                     </archive>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+				  <source>1.6</source>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
