Remove avrdude options from makefile. User should create a avrdude.rc / ~/.avrduderc with options.

--- a/firmware/makefile_common/Makefile.config
+++ b/firmware/makefile_common/Makefile.config
@@ -27,9 +27,12 @@ OBJCOPY = avr-objcopy
 OBJDUMP = avr-objdump
 SIZE = avr-size
 NM = avr-nm
-AVRDUDE = avrdude -P com10 -cstk500v2 # define your avrdude path, programmer settings and COM port for avrdude
 REMOVE = rm -f
 REMOVEDIR = rm -rf
 COPY = cp
 TAIL = tail
 AWK = awk
+
+# Define your avrdude path, programmer settings and COM port for avrdude
+# here, or set up your avrdude.rc (Windows) or ~/.avrduderc (Linux).
+AVRDUDE = avrdude
