main update for onewire support in basestation

--- a/firmware/shc_basestation/Makefile
+++ b/firmware/shc_basestation/Makefile
@@ -28,7 +28,7 @@ TARGET = shc_basestation
 # Source files (C dependencies are automatically generated).
 #   C			*.c
 #   Assembler	*.S
-CSRC = $(TARGET).c rfm12.c util.c uart.c aes256.c fuses.c request_buffer.c
+CSRC = $(TARGET).c rfm12.c util.c uart.c aes256.c fuses.c request_buffer.c onewire.c
 ASRC =
 FUSES = -U hfuse:w:hfuse.hex:i -U lfuse:w:lfuse.hex:i -U efuse:w:efuse.hex:i -u
 
