Added onewire support to tempsensor, minor fixes

--- a/firmware/shc_tempsensor/Makefile
+++ b/firmware/shc_tempsensor/Makefile
@@ -27,7 +27,7 @@ TARGET = shc_tempsensor
 # Source files (C dependencies are automatically generated).
 #   C			*.c
 #   Assembler	*.S
-CSRC = $(TARGET).c rfm12.c util.c uart.c aes256.c sht11.c fuses.c
+CSRC = $(TARGET).c rfm12.c util.c uart.c aes256.c sht11.c fuses.c onewire.c
 ASRC =
 FUSES = -U hfuse:w:hfuse.hex:i -U lfuse:w:lfuse.hex:i -U efuse:w:efuse.hex:i -u
 
