--- a/firmware/makefile_common/Makefile.rules
+++ b/firmware/makefile_common/Makefile.rules
@@ -41,8 +41,15 @@ ALL_LDFLAGS += -Wl,-Map=$(OBJDIR)/$(TARGET).map,--cref
 # set (differently named) CPU type for avrdude
 ifeq ($(MCU),atmega328)
 	AVRDUDEMCU = m328p
-else
+endif
+ifeq ($(MCU),atmega168)
 	AVRDUDEMCU = m168
+endif
+ifeq ($(MCU),atmega329)
+	AVRDUDEMCU = m329p
+endif
+ifeq ($(MCU),atmega169)
+	AVRDUDEMCU = m169p
 endif
 
 # Create final output files (.hex, .eep) from ELF output file.
