--- a/firmware/makefile_common/makefile_common.pnproj
+++ b/firmware/makefile_common/makefile_common.pnproj
@@ -1,1 +1,6 @@
-<Project name="makefile_common"><File path="Makefile.config"></File><File path="Makefile.options"></File><File path="Makefile.rules"></File><File path="Makefile.targets"></File></Project>
+<Project name="makefile_common">
+	<File path="Makefile.config"></File>
+	<File path="Makefile.options"></File>
+	<File path="Makefile.rules"></File>
+	<File path="Makefile.targets"></File>
+</Project>
