--- a/firmware/makefile_common/makefile_common.pnps
+++ b/firmware/makefile_common/makefile_common.pnps
@@ -1,1 +1,5 @@
-<pd><ViewState><e p="makefile_common" x="true"></e></ViewState></pd>
+<pd>
+	<ViewState>
+		<e p="makefile_common" x="true"></e>
+	</ViewState>
+</pd>
