set fixed filename for JAR file

--- a/tools/shc_e2p_editor/pom.xml
+++ b/tools/shc_e2p_editor/pom.xml
@@ -36,6 +36,7 @@
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
+					<finalName>shc_e2p_editor</finalName>
                 </configuration>
             </plugin>
 			<plugin>
