--- a/tools/shc_e2p_editor/pom.xml
+++ b/tools/shc_e2p_editor/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.smarthomatic</groupId>
+  <groupId>org.smarthomatic</groupId>
   <artifactId>shcee</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>shcee</name>
