Change e2p config: Select barometric pressure sensor BMP085 explicitly also as temp sensor, or use another sensor instead.

--- a/firmware/shc_envsensor/Makefile
+++ b/firmware/shc_envsensor/Makefile
@@ -20,7 +20,7 @@
 MCU		       = atmega328
 F_CPU	       = 1000000
 UART_BAUD_RATE = 4800
-UART_DEBUG     = 1
+#UART_DEBUG     = 1
 #UART_RX        = 1
 
 # Target file name (without extension).
