Use ATMega168p instead of ATmega168 (for soil moisture meter). Be aware that you need a newer version of avrdude, because the avrdude.conf of older versions does not contain the 168p.

--- a/firmware/makefile_common/Makefile.rules
+++ b/firmware/makefile_common/Makefile.rules
@@ -51,7 +51,7 @@ endif
 ifeq ($(MCU),atmega328)
 	AVRDUDEMCU = m328p
 else ifeq ($(MCU),atmega168)
-	AVRDUDEMCU = m168
+	AVRDUDEMCU = m168p
 else ifeq ($(MCU),atmega329)
 	AVRDUDEMCU = m329p
 else ifeq ($(MCU),atmega169)
