Use AVR-Crypto lib with ASM imlplementation of AES instead of the C implementation. This speeds up encoding and decoding times by a factor of at least 50 (incl. loading the AES key). This is especially relevant for low speed devices (1 MHz) like the EnvSensor to reduce power consumption, because encoding a 16 byte block now takes <20ms instead of ~750ms. The Makefiles are changed so that all temporary files are stored under the Build path of the device.

--- a/firmware/shc_dimmer/Makefile
+++ b/firmware/shc_dimmer/Makefile
@@ -30,7 +30,7 @@ TARGET = shc_dimmer
 #   C			*.c
 #   Assembler	*.S
 CSRC = $(TARGET).c rfm12.c util.c uart.c aes256.c fuses.c
-ASRC =
+ASRC = ../src_common/aes_keyschedule-asm.S ../src_common/aes_enc-asm.S ../src_common/aes_dec-asm.S ../src_common/aes_sbox-asm.S ../src_common/aes_invsbox-asm.S
 FUSES = -U hfuse:w:hfuse.hex:i -U lfuse:w:lfuse.hex:i -U efuse:w:efuse.hex:i -u
 
 #******************************************************************************
