--- a/firmware/shc_envsensor/Makefile
+++ b/firmware/shc_envsensor/Makefile
@@ -30,8 +30,9 @@ TARGET = shc_envsensor
 #   C			*.c
 #   Assembler	*.S
 CSRC = $(TARGET).c rfm12.c util.c uart.c aes256.c sht11.c fuses.c lm75.c i2c.c bmp085.c srf02.c
-ASRC =
+ASRC = ../src_common/aes_keyschedule-asm.S ../src_common/aes_enc-asm.S ../src_common/aes_dec-asm.S ../src_common/aes_sbox-asm.S
 FUSES = -U hfuse:w:hfuse.hex:i -U lfuse:w:lfuse.hex:i -U efuse:w:efuse.hex:i -u
+
 
 #******************************************************************************
 # Include defaults
