--- a/firmware/shc_soil_moisture_meter/Makefile
+++ b/firmware/shc_soil_moisture_meter/Makefile
@@ -20,7 +20,7 @@
 MCU		       = atmega328
 F_CPU	       = 1000000
 UART_BAUD_RATE = 4800
-UART_DEBUG     = 1
+#UART_DEBUG     = 1
 #UART_RX        = 1
 
 # Target file name (without extension).
@@ -30,7 +30,7 @@ TARGET = shc_soil_moisture_meter
 #   C			*.c
 #   Assembler	*.S
 CSRC = $(TARGET).c rfm12.c util.c uart.c aes256.c fuses.c
-ASRC =
+ASRC = ../src_common/aes_keyschedule-asm.S ../src_common/aes_enc-asm.S ../src_common/aes_dec-asm.S ../src_common/aes_sbox-asm.S
 FUSES = -U hfuse:w:hfuse.hex:i -U lfuse:w:lfuse.hex:i -U efuse:w:efuse.hex:i -u
 
 #******************************************************************************
