Support changing UART baud rate at base station from 19200 to 115200 to speed up sending commands. Default value is still 19200.

--- a/firmware/shc_basestation/Makefile
+++ b/firmware/shc_basestation/Makefile
@@ -19,6 +19,7 @@
 # CPU config
 MCU		       = atmega328
 F_CPU	       = 20000000
+# baud rate in makefile is ignored, because it is configured by e2p
 UART_BAUD_RATE = 19200
 
 # never remove this, because the base station needs the UART
