Update UART Baud rate.

--- a/firmware/shc_controller/Makefile
+++ b/firmware/shc_controller/Makefile
@@ -19,8 +19,8 @@
 # CPU config
 MCU            = atmega644p
 F_CPU          = 20000000
-UART_BAUD_RATE = 4800
-#UART_DEBUG     = 1
+UART_BAUD_RATE = 115200
+UART_DEBUG     = 1
 #UART_RX        = 1
 
 # Target file name (without extension).
