Switch off UART debugging.

--- a/firmware/shc_controller/Makefile
+++ b/firmware/shc_controller/Makefile
@@ -20,7 +20,7 @@
 MCU            = atmega1284p
 F_CPU          = 20000000
 UART_BAUD_RATE = 115200
-UART_DEBUG     = 1
+#UART_DEBUG     = 1
 #UART_RX        = 1
 
 # Target file name (without extension).
